<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/avatar_description"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/author_name"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="Нетология. Университет интернет-профессий" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/date"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        tools:text="12 августа в 21:57" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/authorName" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, date, options" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/post_text"
        android:ellipsize="end"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        tools:text="efwffewfewfewfewf" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/buttonsBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postText" />
    <!--        app:constraint_referenced_ids="likeBtn, likesCount, shareBtn, sharesCount, viewsCount, viewBtn" />-->

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/likeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/like_button"
        android:src="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsBarrier" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/likesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/quantity_of_likes"
        app:layout_constraintBottom_toBottomOf="@id/likeBtn"
        app:layout_constraintStart_toEndOf="@id/likeBtn"
        app:layout_constraintTop_toTopOf="@id/likeBtn"
        tools:text="123" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share_button"
        android:src="@drawable/ic_share_24dp"
        app:layout_constraintStart_toEndOf="@id/likesCount"
        app:layout_constraintTop_toBottomOf="@id/buttonsBarrier" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sharesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/qauntity_of_shares"
        app:layout_constraintBottom_toBottomOf="@id/shareBtn"
        app:layout_constraintStart_toEndOf="@id/shareBtn"
        app:layout_constraintTop_toTopOf="@id/shareBtn"
        tools:text="456" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:contentDescription="@string/quantity_of_views"
        app:layout_constraintBottom_toBottomOf="@id/viewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsBarrier"
        app:layout_constraintTop_toTopOf="@id/viewBtn"
        tools:text="15,8K" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/viewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/views_icon"
        android:src="@drawable/ic_view_24dp"
        app:layout_constraintEnd_toStartOf="@id/viewsCount"
        app:layout_constraintTop_toBottomOf="@id/buttonsBarrier" />



</androidx.constraintlayout.widget.ConstraintLayout>